# VortexInstaller

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py
.github/ISSUE_TEMPLATE/: bug_report.md
assets/desktop/: vortex_launcher_desktop.desktop
misc/linux/installer/: main.py
misc/linux/uninstaller/: main.py
misc/linux/updater/: main.py
misc/linux/vxinstaller/: main.py  org.vortex.vxinstaller.policy  start_vortex.sh
misc/linux/vxuninstaller/: main.py
misc/windows/installer/: main.py
misc/windows/uninstaller/: main.py
misc/windows/updater/: main.py
misc/windows/vxinstaller/: main.py
misc/windows/vxuninstaller/: main.py
script/: build_linux.sh  build_windows.bat
src/: backend.cpp  base.cpp  base.hpp  installer.cpp  uninstall.cpp  updater.cpp  vxinstaller.cpp  vxuninstall.cpp
src/api/: api.cpp  api.hpp
src/common/: common.hpp
src/ui/: CMakeLists.txt  app.hpp  backend_client.cpp  backend_client.hpp  helpers.hpp
src/ui/assets/resources/license/: apache2.txt
src/ui/assets/resources/locales/: DA.json  DE.json  EN.json  ES.json  FI.json  FR.json  IT.json  PT.json  SV.json
src/ui/src/static/install/: install.cpp  install.hpp
src/ui/src/static/install_vx/: install_vx.cpp  install_vx.hpp
src/ui/src/static/uninstall/: uninstall.cpp  uninstall.hpp
src/ui/src/static/uninstall_vx/: uninstall_vx.cpp  uninstall_vx.hpp
src/ui/src/static/update/: update.cpp  update.hpp
ui/installer/: CMakeLists.txt  app.hpp  installer.cpp  installer.hpp
ui/installer/assets/: .gitignore
ui/installer/assets/resources/locales/: DA.json  DE.json  FR.json  IT.json  PT.json  en.json  fr.json
ui/installer/assets/ressources/license/: apache2.txt
ui/installer/assets/ressources/system/: vortex_updater.desktop
ui/installer/src/static/install/: install.cpp  install.hpp
ui/installer/src/static/install_vx/: install_vx.cpp  install_vx.hpp
ui/installer/src/static/uninstall/: uninstall.cpp  uninstall.hpp
ui/installer/src/static/uninstall_vx/: uninstall.cpp  uninstall_vx.cpp  uninstall_vx.hpp
ui/installer/src/static/uninstaller/: install.cpp  install.hpp
ui/installer/src/static/update/: update.cpp  update.hpp
ui/installer/src/static/welcome/: welcome.cpp  welcome.hpp
